--- a/twittler.css
+++ b/twittler.css
@@ -3,7 +3,7 @@ section {
   border-radius: 6px;
   color: #fff;
   display: block;
-  font: 14px/24px "Source Code Pro", Inconsolata, "Lucida  Console", Terminal, "Courier New", Courier;
+  font: 14px/24px  Inconsolata
   padding: 24px 14px;
   text-align: center;
 }
@@ -14,6 +14,10 @@ aside {
 
 h2 {
 
+}
+
+h3 {
+  color: white;
 }
 
 aside {
@@ -30,18 +34,35 @@ p {
 	padding: 5px;
 }
 
+a {
+  color: white;
+}
+
+.odd {
+  background-color: grey;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 5px;
+}
+
+.even {
+  background-color: blue;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 5px;
+}
 
 .tweet-feed {
   float: right;
   width: 70%;
-  height: 750px;
-  background-color: blue;
   border-radius: 6px;
   margin-bottom: 5%;
 }
 
-
-
 .content-well {
 	display: inline;
+}
+
+#restoreButton {
+  visibility: hidden;
 }
